# TritonBot

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  test.ts  tsconfig.json
data/: config.json
src/: bot.ts  config.json  main.rs
src/commands/: about.ts  command.rs  mod.rs  ping.rs  setup.ts  verification.ts  verify.rs  xy.rs  xy.ts
src/events/: onInteraction.ts  onReady.ts  on_interaction.ts  on_ready.ts
src/handlers/: GuildConfigurationHandler.ts
src/interface/: command.ts
src/types/: command.ts  configuration.ts
src/utils/: discord_helper.ts  discord_util.rs  discord_utils.ts  embed.rs  embeds.ts  file_util.ts  mod.rs  triton_lookup.ts  triton_verifier.ts  verification.rs
