[package]
name = "triton_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
chrono = "0.4.23"
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
